--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chesney Julian</title>
   </head>
-  <body class="min-h-screen bg-gray-900">
+  <body class="min-h-screen bg-gray-900 bg-fixed">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
